Remove Footer & fixed layout white space

--- a/Asst/wwwroot/css/site.css
+++ b/Asst/wwwroot/css/site.css
@@ -9,12 +9,16 @@ html {
 }
 
 html {
-  position: relative;
-  min-height: 100%;
+    position: relative;
+    height: 100%;
+    width:100%;
 }
 
 body {
-  margin-bottom: 60px;
+    height: 100%;
+    margin: 0; /* Remove default margin */
+    padding: 0; /* Remove default padding */
+    width: 100%;
 }
 
 .startbutton {
@@ -53,9 +57,10 @@ body {
 }
 
 .chat {
+    width: 100%;
+    height:100%;
     color: white;
     background-color: rgb(66, 66, 66);
-    min-height:700px;
     padding: 30px;
-    margin:0 0 0 0;
+    margin: 0 0 0 0;
 }
